--- a/tu.hsuanling/index.html
+++ b/tu.hsuanling/index.html
@@ -4,199 +4,81 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<title>Cool Website</title>
+
 	<link rel="stylesheet" href="lib/css/styleguide.css">
 	<link rel="stylesheet" href="css/storetheme.css">
-
-	<title>Succulets For You</title>
 </head>
 
 
 
 <body>
 
-	<!-- Discount bar + Logo + Navigations -->
-	<header>
-		<div class="discount-bar">FREE SHIPPING ON ALL ORDERS OF $59+</div>
-		<div class="navbar">
-			<div class="site-width display-flex ">
-				<div class="flex-none">
-				<h1 class="logo" style="font-family: Georgia, 'Times New Roman', serif";>Succulent For You</h1>
-				</div>
-				<div class="flex-stretch"></div>
-				<nav class="flex-none nav">
-					<ul class="display-flex">
-						<li><a href="#">Succulents</a></li>
-						<li><a href="#">Supplies</a></li>
-						<li><a href="#">Succulent 101</a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</nav>
+	<!-- header>h1+p -->
+	<header class="navbar">
+		<div class="container display-flex">
+			<div class="flex-none">
+				<h1>Cool Website</h1>
 			</div>
+			<div class="flex-stretch"></div>
+			
+		
+			<nav class="flex-none nav">
+				<ul class="container display-flex">
+					<li><a href="#article1">Link1</a></li>
+					<li><a href="#article2">Link2</a></li>
+					<li><a href="#article3">Link3</a></li>
+					<li><a href="#article4">Link4</a></li>
+				</ul>
+			</nav>
 		</div>
 	</header>
 
-	<!-- Hero Image Container -->
-	<div class="hero-image" style="background-image:url(img/pexels-scott-webb-305827.jpg)"></div>
 
-	<!-- Main Product Container -->
-	<div class="site-width">
-		<h3 class="subtitles">Our Succulents</h3>
-		<div class="site-width display-flex flex-wrap">
-
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/pexels-eka-sutrisno-1863621.jpg" style="width:20vw"></a>
+	<!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*3>Lorem40 -->
+	<div class="container">
+		<article id="article1" class="article card soft">
+			<div class="display-flex flex-align-center">
+				<div class="flex-stretch">
+					<h2>Article 1</h2>
 				</div>
-				<div class="product-name">Kalanchoe Millotii</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 13.00</div>
+				<div class="flex-none"><small>5:20am</small></div>
 			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/pexels-ekaterina-bolovtsova-9130800.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Pachyphytum Oferia</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 10.00</div>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis eos fugiat facere doloremque, odit quaerat quis minima pariatur repellat neque maxime, magnam, corporis temporibus quod unde fugit a, eum perspiciatis atque facilis veniam. Aut fugiat aliquam eligendi voluptatem laudantium excepturi.</p>
+				<p>Nihil facilis ad sint velit voluptate. Quasi quia sequi reiciendis eligendi voluptatum suscipit autem accusamus earum quod! Hic, voluptatem consectetur, impedit sed recusandae quo expedita quisquam delectus inventore animi! Corporis maiores vitae nisi amet ducimus similique nam consequuntur quae consequatur?</p>
+				<p>Saepe placeat debitis quidem, id provident. Temporibus, quasi. Excepturi, libero, fugit. Voluptatem error adipisci, hic placeat distinctio quaerat fuga, soluta odit voluptas ea perspiciatis tempora officiis asperiores deleniti architecto! Voluptatem ipsam tempora sapiente sequi animi, debitis reiciendis perspiciatis at aspernatur.</p>
 			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/pexels-dominika-roseclay-1856430.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Mammillaria polythele</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 10.00</div>
+		</article>
+		<article id="article2" class="article card hard">
+			<h2>Article 2</h2>
+			<div class="article-body">
+				<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Facilis, numquam impedit at quos repellendus, nobis veniam blanditiis sit dicta, corrupti iste cumque debitis, consequuntur labore laborum eaque dolor adipisci distinctio beatae nesciunt aut cupiditate. Blanditiis optio praesentium, culpa et ut.</p>
+				<p>Doloribus ea dolore, delectus odit sit temporibus asperiores accusantium nam. Rerum aperiam nobis minus ducimus, repellendus quasi numquam consectetur beatae nesciunt voluptates sapiente quo nemo ut molestias in adipisci facilis doloribus recusandae amet porro eligendi ex esse dolorem! Itaque, eligendi.</p>
+				<p>Eligendi dolore distinctio odio, magni est amet debitis non quasi temporibus animi cupiditate architecto sunt quaerat ipsa neque impedit, itaque quibusdam sequi enim illo, sint dolores totam tempore nobis maxime. Quam, nesciunt? Ipsum nesciunt consequatur mollitia dignissimos! Quas, eum, atque.</p>
 			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/pexels-amelia-cui-11986009.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Canary Aeonium</div>
-				<div class="product-size">4"</div>
-				<div class="product-price">$ 18.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Echeveria Elegans.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Echeveria Elegans</div>
-				<div class="product-size">4"</div>
-				<div class="product-price">$ 20.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Polaskia chichipe.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Polaskia Chichipe</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 13.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Haworthia limifolia.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Haworthia Limifolia</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 13.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Sedum adolphii.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Sedum Adolphii</div>
-				<div class="product-size">1.5"</div>
-				<div class="product-price">$ 8.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Oddity Sempervivum.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Oddity Sempervivum</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 13.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Haworthia Tortuosa.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Haworthia Tortuosa</div>
-				<div class="product-size">5"</div>
-				<div class="product-price">$ 20.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Gymnocalycium mihanovichii strawberry cactus.jpg" style="width:20vw"></a>
-				</div>
-				<div class="product-name">Gymnocalycium Mihanovichii</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 10.00</div>
-			</div>
-
-			<div class="product-box flex-four-columns">
-				<div class="product-image-frame">
-					<a href="#"><img class="product-image" src="img/Pachyphytum compactum.jpg" style="width:20vw;"></a>
-				</div>
-				<div class="product-name">Pachyphytum Compactum</div>
-				<div class="product-size">2.5"</div>
-				<div class="product-price">$ 10.00</div>
-			</div>
-			
-		</div>
-
-		<!-- Subscribe Newsletter-->
-		<!-- <div class="site-width">
-			<div class="subscribe-bar">
-				
-			</div>
-		</div>
- -->
-
-	<!-- Footer -->
-	<footer>
-		<div class="site-width footer-text display-flex">
-
-			<div>
-				<h2 class="footer-logo">Succulents For You</h2>
-				<p class="about-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, deserunt quisquam est perspiciatis minus, dolores ex excepturi vel laudantium error vero numquam. Qui possimus quod enim, molestiae aliquam nihil sint, tenetur, ipsum minima deserunt, eos quidem perferendis fugit laboriosam non blanditiis iure expedita.</p>
-			</div>
-			
-
-			<div class="footer-columns">
-				<div class="footer-subtitle">Need Help?</div>
-				<a href="#" class="footer-contents display-block">Shipping & Returns</a>
-				<a href="#" class="footer-contents display-block">Brand Ambassadors</a>
-				<a href="#" class="footer-contents display-block">Affiliate Program</a>
-				<a href="#" class="footer-contents display-block">Privacy Policy</a>
-				<a href="#" class="footer-contents display-block">Copyright Policy</a>
-				<a href="#" class="footer-contents display-block">Terms of Use</a>
-				<a href="#" class="footer-contents display-block">Terms of Service</a>
-				<a href="#" class="footer-contents display-block">Refund Policy</a>
-			</div>
-			
-			<div class="footer-columns">
-				<div class="footer-subtitle">Main Menu</div>
-				<a href="#" class="footer-contents display-block">Shop</a>
-				<a href="#" class="footer-contents display-block">Care Guide</a>
-				<a href="#" class="footer-contents display-block">Blog</a>
-				<a href="#" class="footer-contents display-block">Reviews</a>
-			</div>
-			
-		</div>
-
-		<div class="copyright">&copy; 2022 Succulent For You</div>
+		</article>
+	</div>
+	<div class="view-window" style="background-image: url('img/pexels-scott-webb-305827.jpg');">
 		
-	</footer>
+	</div>
+	<div class="container">
+		<article id="article3" class="article">
+			<h2>Article 3</h2>
+			<div class="article-body">
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo cumque eveniet deleniti consectetur adipisci impedit provident? Modi, nulla, ipsa. Nobis qui aliquam eligendi necessitatibus sapiente fugiat voluptas molestias vel? Quis consectetur, quam aliquid in accusantium laudantium facere debitis! Accusantium, dolore.</p>
+				<p>Sunt vero, aspernatur accusamus iusto nulla consequatur ratione et exercitationem facere illo modi magni amet laboriosam, commodi officia quas molestiae, voluptatem, repellat tempore. Cupiditate, sed qui id quisquam ea numquam a aut corporis adipisci ipsa, perspiciatis hic voluptas dolorem? Quibusdam.</p>
+				<p>Illum eius modi delectus natus minus a exercitationem! Provident quaerat praesentium, harum sequi animi consequuntur fuga, sapiente. Et eveniet culpa incidunt, eaque laudantium temporibus in labore assumenda, odit odio consequuntur, consectetur delectus dolorem. Laudantium voluptatum quam, possimus, tenetur expedita quidem.</p>
+			</div>
+		</article>
+		<article id="article4" class="article">
+			<h2>Article 4</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere iste accusantium blanditiis quibusdam est magni voluptatum temporibus explicabo natus ex consectetur, cupiditate laudantium ab tempora possimus reiciendis! Error similique, vero reprehenderit excepturi autem, laudantium, minus, vel ab nesciunt porro doloribus!</p>
+				<p>Odio consequuntur sunt delectus voluptatem quos nam facere, placeat consectetur, eveniet quaerat suscipit quam dolorum dolorem perferendis natus labore eius, totam cum alias accusantium asperiores sit. Exercitationem ipsa sit aut eveniet iusto quo blanditiis inventore officiis libero laboriosam nisi, quas!</p>
+				<p>Corrupti enim deleniti, iusto, laudantium numquam atque nemo. Blanditiis culpa ullam tempora ratione corrupti obcaecati suscipit dolore, nemo explicabo iusto quod ab quae animi vero magnam ducimus incidunt molestiae, sit aut odio dolor, vel nobis provident. Sint, odit nemo deleniti!</p>
+			</div>
+		</article>
+	</div>
 </body>
 </html>
