--- a/Kardan_Kosar/index.html
+++ b/Kardan_Kosar/index.html
@@ -56,7 +56,7 @@
 				</div>
 			</article>
 		</div>
-		<div class="view-window half" style="background-image: url(img/Family.jpeg);"></div>
+		<div class="view-window half" style="background-image: url(img/Family.png);"></div>
 		<div class="container">
 			<article id="article3" class="article">
 				<h2>Our History</h2>
