--- a/Kardan_Kosar/index.html
+++ b/Kardan_Kosar/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Meta -->
 		<meta charset="UTF-8">
-		<title>Landing Page</title>
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<!-- Library Files -->
 		<link rel="stylesheet" href="lib/css/styleguide.css">
+		<link rel="stylesheet" href="lib/css/gridsystem.css">
+		
+		<!-- style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/storetheme.css">
+
+		<!-- Page Title -->
+		<title>Landing Page</title>
 	</head>
 	<body>
 
@@ -29,8 +37,34 @@
 			</div>
 		</header>
 
+		<!-- responsive grid -->
+<!-- 		<div class="card">
+			<div class="container">
+				<div class="grid gapc xs-small md-medium">
+					<div class="col-xs-6">Column 6</div>
+					<div class="col-xs-6">Column 6</div>
+				</div>
+				<div class="grid">
+					<div class="col-xs-12">Column 4</div>
+					<div class="col-xs-12">Column 4</div>
+					<div class="col-xs-12">Column 4</div>
+				</div>
+				<div class="grid">
+					<div class="col-xs-3">Column 3</div>
+					<div class="col-xs-3">Column 3</div>
+					<div class="col-xs-3">Column 3</div>
+					<div class="col-xs-3">Column 3</div>
+				</div>
+				<div class="grid">
+					<div class="col-xs-3">Column 3</div>
+					<div class="col-xs-6">Column 6</div>
+					<div class="col-xs-3">Column 3</div>
+				</div>
+			</div>
+		</div> -->
+
 		<!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*3>lorem40 -->
-		<div class="view-window full" style="background-image: url(img/MedicineBottle.png);"></div>
+		<div class="view-window half" style="background-image: url(img/MedicineBottle.png);"></div>
 		<div class="container">
 			<article id="article1" class="article card soft">
 				<div class="display-flex flex-align-center">
