--- a/Kardan_Kosar/styleGuide/index.html
+++ b/Kardan_Kosar/styleGuide/index.html
@@ -401,7 +401,7 @@
 			<!-- PRODUCT OVERLAY BOTTOM  -->
 
 			<div id="bottom" class="card soft">
-				<h3>Product Overlay</h3>
+				<h3>Product Overlay Bottom</h3>
 				<div class="grid gap">
 					<div class="col-xs-12 col-md-4">
 						<figure class="figure product-overlay">
