--- a/chang.karen/index.html
+++ b/chang.karen/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Karen Chang</title>
+	<title>Assignment_2</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://use.typekit.net/dgx7nvl.css">
-    <link rel="stylesheet" href="lib/css/styleguide.css ">
-    <link rel="stylesheet" href="css/storetheme.css ">
+    <link rel="stylesheet" href="https://use.typekit.net/dgx7nvl.css" />
+    <link rel="stylesheet" href="lib/css/candystyleguide.css" />
+    <link rel="stylesheet" href="css/candystoretheme.css" />
+   
 
 </head>
 <body>
