--- a/christiansen.nikoline/index.html
+++ b/christiansen.nikoline/index.html
@@ -6,6 +6,7 @@
 	<title>Cool Website</title>
 
 	<link rel="stylesheet" type="text/css" href="lib/css/styleguide.css">
+	<link rel="stylesheet" type="text/css" href="lib/css/gridsystem.css">
 	<link rel="stylesheet" type="text/css" href="css/storetheme.css">
 </head>
 <body>
@@ -29,9 +30,6 @@
 		</div>
 	</header>
 
-
-
-
 	<!-- .container>article#article$.article*4>h2{Article $}+div.article-body>p*3>lorem40 -->
 	<div class="view-window" style="background-image: url('img/van1.jpeg');">
 		<div class="container mid">
@@ -43,7 +41,45 @@
 	</div>
 		<div class="container">
 			<h1 id="article1">Van camping</h1>
+			<div class="grid gap xs-small md-medium">
+				<div class="col-xs-6 col-md-3">
+					<div class="card soft">
+						<img src="https://via.placeholder.com/500" alt="test" class="media-image">
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card soft">
+						<img src="https://via.placeholder.com/500" alt="test" class="media-image">
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card soft">
+						<img src="https://via.placeholder.com/500" alt="test" class="media-image">
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="card soft">
+						<img src="https://via.placeholder.com/500" alt="test" class="media-image">
+					</div>
+				</div>
+			</div>
 		</div>
+	
+
+
+	<div class="view-window" style="background-image: url('img/van2.jpeg');">
+		<div class="container card soft mid2">
+		<article id="article4" class="article">
+			<h2>Article 4</h2>
+			<div class="article-body">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, facilis? Minima explicabo laborum vero repellendus iusto nemo eaque unde, perspiciatis doloribus dolorem. Animi saepe eaque voluptate repellat molestias aperiam nam omnis sequi numquam neque in et, repellendus earum fugiat quo.</p>
+				<p>Commodi quos eum, cum debitis assumenda quibusdam id doloribus, cumque ad totam iste provident ab vero pariatur, nesciunt unde, hic dolorem numquam. Deserunt sequi dicta ullam vel, id ad nesciunt odit est libero, dolores optio animi repellat iusto amet et.</p>
+				<p>Officiis aliquam, soluta voluptatem suscipit minus omnis praesentium dicta minima repudiandae vero ut cupiditate. Sit eos saepe voluptate laudantium, non exercitationem vero amet maiores voluptates explicabo suscipit ducimus repellendus fugit tempore laboriosam dolorem nihil voluptas porro deserunt. Nostrum fugit, assumenda?</p>
+			</div>
+		</article>
+	</div>
+	</div>
+
 		<div class="container display-flex">	
 		<article class="article card soft">
 			<h2>Article 1</h2>
@@ -67,20 +103,6 @@
 				<p>Minima explicabo numquam, quaerat excepturi quasi? Aliquid labore, quo praesentium? In impedit nisi quod eligendi necessitatibus neque reiciendis fugiat aperiam alias quo! In porro rerum corporis corrupti, magnam aliquid cum dolorum earum quibusdam blanditiis unde, perspiciatis numquam inventore dolorem sequi!</p>
 			</div>
 		</article>
-	</div>
-
-
-	<div class="view-window" style="background-image: url('img/van2.jpeg');">
-		<div class="container card soft mid2">
-		<article id="article4" class="article">
-			<h2>Article 4</h2>
-			<div class="article-body">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, facilis? Minima explicabo laborum vero repellendus iusto nemo eaque unde, perspiciatis doloribus dolorem. Animi saepe eaque voluptate repellat molestias aperiam nam omnis sequi numquam neque in et, repellendus earum fugiat quo.</p>
-				<p>Commodi quos eum, cum debitis assumenda quibusdam id doloribus, cumque ad totam iste provident ab vero pariatur, nesciunt unde, hic dolorem numquam. Deserunt sequi dicta ullam vel, id ad nesciunt odit est libero, dolores optio animi repellat iusto amet et.</p>
-				<p>Officiis aliquam, soluta voluptatem suscipit minus omnis praesentium dicta minima repudiandae vero ut cupiditate. Sit eos saepe voluptate laudantium, non exercitationem vero amet maiores voluptates explicabo suscipit ducimus repellendus fugit tempore laboriosam dolorem nihil voluptas porro deserunt. Nostrum fugit, assumenda?</p>
-			</div>
-		</article>
-	</div>
 	</div>
 
 	<div class="container">
