--- a/fu.zhen/index.html
+++ b/fu.zhen/index.html
@@ -2,43 +2,120 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ariel Design Store</title>
+	<title>Cool Website</title>
+
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="lib/css/styleguide.css">
+	<link rel="stylesheet" href="lib/css/gridsystem.css">
 	<link rel="stylesheet" href="css/storetheme.css">
 </head>
 <body>
+	
+    <!-- header>h1+p -->
 	<header class="navbar">
 		<div class="container display-flex">
 			<div class="flex-none">
-				<h1>Ariel Design</h1>
+				<h1>Cool website</h1>
 			</div>
 			<div class="flex-stretch"></div>
-			
-			
 			<nav class="flex-none nav">
 				<ul class="container display-flex">
-					<li><a href="#article1">Home</a></li>
-					<li><a href="#article1">Products</a></li>
-					<li><a href="#article2">Sales</a></li>
-					<li><a href="#article3">About us</a></li>
-					<li><a href="#article4">Newsletters</a></li>
+					<li><a href="#article1">Link 1</a></li>
+					<li><a href="#article2">Link 2</a></li>
+					<li><a href="#article3">Link 3</a></li>
+					<li><a href="#article4">Link 4</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
-	
+	<div class="container">
+		<div class="card soft">
+			<h2>Grid</h2>
+			<div class="grid">
+				<div class="col-xs-6">colunm 6</div>
+				<div class="col-xs-6">colunm 6</div>
+			</div>
+			<div class="grid gap xs-small md-medium">
+				<div class="col-xs-4">colunm 4</div>
+				<div class="col-xs-4">colunm 4</div>
+				<div class="col-xs-4">colunm 4</div>
+
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-6">colunm 6</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container">
+		<div class="card soft">
+			<h2>Responsive Grid</h2>
+			<div class="grid">
+				<div class="col-xs-12 col-md-6">colunm 6</div>
+				<div class="col-xs-12 col-md-6">colunm 6</div>
+			</div>
+			<div class="grid">
+				<div class="col-xs-12 col-md-4 col-xl-3">colunm 4</div>
+				<div class="col-xs-12 col-md-4 col-xl-6">colunm 4</div>
+				<div class="col-xs-12 col-md-4 col-xl-3">colunm 4</div>
+
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+				<div class="col-xs-3">colunm 3</div>
+			</div>
+			<div class="grid ten gap">
+				<div class="col-xs-2">colunm 2</div>
+				<div class="col-xs-2">colunm 2</div>
+				<div class="col-xs-2">colunm 2</div>
+				<div class="col-xs-2">colunm 2</div>
+				<div class="col-xs-2">colunm 2</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="grid gap xs-small md-medium">
+			<!-- .col-xs-6.col-md-3*4>.card>{Card} -->
+			<div class="col-xs-6 col-md-3">
+				<div class="card soft">
+					<img src="https://via.placeholder.com/500" alt="" class="media-image">
+				</div>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<div class="card soft">
+					<img src="https://via.placeholder.com/500" alt="" class="media-image">
+				</div>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<div class="card soft">
+					<img src="https://via.placeholder.com/500" alt="" class="media-image">
+				</div>
+			</div>
+			<div class="col-xs-6 col-md-3">
+				<div class="card soft">
+					<img src="https://via.placeholder.com/500" alt="" class="media-image">
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div class="container">
 		<article class="article card soft" id="article1">
 			<div class="display-flex flex-align-center">
 				<div class="flex-stretch">
-					<h2>New Collection</h2>
+					<h2>Article 1</h2>
 				</div>
 				<div class="flex-none">
-					<small>Just Arrived</small>
+					<small>5:20am</small>
 				</div>
 			</div>
 			<div class="article-body">
@@ -47,15 +124,8 @@
 				<p>Quia perferendis possimus cum, non, inventore in nam, perspiciatis distinctio, reprehenderit voluptates hic molestiae iure dolorum dolore. A voluptatum, cum nihil natus totam non recusandae saepe molestias, aliquam vel facilis incidunt fugiat sit qui unde provident dignissimos voluptatem, quia quas.</p>
 			</div>
 		</article>
-	</div>
-
-		<div class="view-window" style="background-image: url('img/hands.png');">
-		
-	</div>
-	<div class="container">
-
 		<article class="article card hard" id="article2">
-			<h2>Summer Collection</h2>
+			<h2>Article 2</h2>
 			<div class="article-body">
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe consequatur amet quam facilis assumenda totam ea? Qui saepe modi inventore accusamus distinctio harum quae praesentium aut dolores alias, quo possimus velit facere omnis cupiditate voluptatibus, numquam? Nihil, a, qui?</p>
 				<p>Eaque error consequatur nisi quas rem mollitia labore porro expedita, aperiam, obcaecati impedit cupiditate esse dolorum debitis vitae commodi enim, asperiores, consequuntur ipsa laboriosam nemo deserunt tempore repellat. Quisquam deleniti voluptates facere, placeat voluptatibus nihil dolorum debitis aliquam at officiis.</p>
@@ -63,12 +133,12 @@
 			</div>
 		</article>
 	</div>
-	<div class="view-window" style="background-image: url('img/greenjewelry.png');">
+	<div class="view-window" style="background-image: url('img/moutain.jpeg');">
 		
 	</div>
 	<div class="container">
-		<article class="article card light" id="article3">
-			<h2>Custom Jewelry</h2>
+		<article class="article" id="article3">
+			<h2>Article 3</h2>
 			<div class="article-body">
 				<p>Lorem ipsum dolor sit amet consectetur, adipisicing, elit. Quis tenetur expedita distinctio mollitia doloribus cum impedit quidem a deserunt ea, consequatur omnis! Consequuntur quis blanditiis perferendis eveniet suscipit, modi nisi, temporibus tempore autem dolorum sed error, adipisci quia cumque labore.</p>
 				<p>Tenetur, suscipit pariatur itaque quam ea eligendi vero inventore ipsam aut? Earum illum quos maxime pariatur, velit inventore expedita, voluptatum architecto explicabo saepe sapiente dicta nisi tempore temporibus. Ad placeat aliquam non unde quia dolorem quo dolore natus sapiente eum.</p>
@@ -76,7 +146,7 @@
 			</div>
 		</article>
 		<article class="article" id="article4">
-			<h2>Visit the Studio</h2>
+			<h2>Article 4</h2>
 			<div class="article-body">
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt placeat molestias sequi! Doloribus hic necessitatibus quam eligendi, quas, dicta repudiandae esse sit ipsa similique adipisci illo sunt porro iusto neque nemo eos dolore aspernatur debitis alias itaque suscipit velit doloremque.</p>
 				<p>Consectetur quia perferendis dolorem in quibusdam, neque ipsum voluptas, aut quaerat explicabo, accusantium obcaecati doloribus laborum possimus excepturi ducimus ea iste? Sapiente consectetur aut porro qui eligendi soluta saepe at consequuntur quae, velit delectus iusto rem, sint quibusdam modi sunt.</p>
@@ -87,6 +157,4 @@
 
 
 </body>
-<footer><p>Copyright <span>&copy;<span> 2022 IXD608_OL1 Zhen Fu</p>
-	</footer>
 </html>
