--- a/chang.karen/styleguide/index.html
+++ b/chang.karen/styleguide/index.html
@@ -10,11 +10,13 @@
 
     <link rel="stylesheet" href="../lib/css/gridsystem.css" />
     <link rel="stylesheet" href="../styleguide/styleguide.css" />
+    
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
-<header class="navbar">
+
+	<header class="navbar">
 		<div class="container display-flex">
 			<div class="flex-none">
 				<h1>Styleguide</h1>
@@ -22,10 +24,10 @@
 			<div class="flex-stretch"></div>
 			
 			<nav class="flex-none nav">
-			<ul class="container display-flex">
-				<li><a href="#tableofcontents">Table of Content</a></li>
-			</ul>
-		</nav>
+				<ul class="container display-flex">
+					<li><a href="#tableofcontents">Table of Content</a></li>
+				</ul>
+			</nav>
 		</div>		
 	</header>
 
@@ -38,9 +40,18 @@
 						<li><a href="#typography">Typography</a></li>
 						<li><a href="#cards">Cards</a></li>
 						<li><a href="#viewwindow">View Window</a></li>
-						<li><a href="#navigation">Navigation</a></li>
+						<li><a href="#navigations">Navigation</a></li>
 						<li><a href="#gridsystem">Grid System</a></li>
 						<li><a href="#flexsystem">Flex System</a></li>
+						<li><a href="#tables">Tables</a></li>
+						<li><a href="#figures">Figures</a></li>
+						<li><a href="#forms">Forms</a></li>
+						<ul>
+							<li><a href="#inputs">Inputs</a></li>
+							<li><a href="#labels">Labels</a></li>
+							<li><a href="#controls">Controls</a></li>
+							<li><a href="#buttons">Buttons</a></li>
+						</ul>
 					</ul>
 				</nav>
 			</div>
@@ -68,7 +79,7 @@
 			<p>Quae non id porro sunt voluptas eos, eum sint recusandae praesentium possimus aliquid, maxime officiis minima tenetur, quis! Ipsa culpa repudiandae ad obcaecati, quibusdam maiores est, hic voluptatibus cum consectetur!</p>
 		</div>
 
-		<div class="container">
+		<div class="container" id="cards">
 			<h2>Cards</h2>
 			<div class="grid gap">
 				<div class="col-xs-12 col-md-6">
@@ -77,10 +88,17 @@
 				<div class="col-xs-12 col-md-6">
 					<div class="card soft">Card Soft</div>
 				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="card hard">Card Hard</div>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="card dark">Card Dark</div>
+				</div>
+
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container" id="viewwindow">
 			<h2>View Window</h2>
 
 		</div>
@@ -153,12 +171,12 @@
 
 		</div>
 
-		<div class="container">
+		<div class="container" id="gridsystem">
 			<h2>Grid System</h2>
 
 		</div>
 
-		<div class="container">
+		<div class="container" id="flexsystem">
 			<h2>Flex System</h2>
 
 		</div>
@@ -191,7 +209,7 @@
 			
 		</script>
 
-		<div class="container">
+		<div class="container" id="tables">
 
 			<h2>Tables</h2>
 
@@ -332,6 +350,78 @@
 			</div>
 
 		</div>
+
+	</div>
+
+	<div class="container" id="forms">
+		<h2>Forms</h2>
+		<h3 id="inputs">Inputs</h3>
+
+		<div class="card soft" id="form-card">
+			<h3>Default Inputs</h3>
+			<form>
+				<input type="text"><br>
+				<input type="number"><br>
+				<input type="password"><br>
+				<input type="url"><br>
+				<input type="email"><br>
+				<input type="datetime-local"><br>
+				<input type="date"><br>
+				<input type="search"><br>
+			</form>
+
+
+			<h3>Form Input</h3>
+		
+				
+			<form id="controls">
+				<div class="form-control">
+					<label class="form-label" id="labels">Example</label>
+					<input type="text" placeholder="Text" class="form-input">
+				</div>
+				<div class="form-control">
+					<label class="form-label">Example</label>
+					<input type="number" placeholder="Number" class="form-input">
+				</div>
+				<div class="form-control">
+					<label class="form-label">Example</label>
+					<input type="password" placeholder="Password" class="form-input">
+				</div>
+				<div class="form-control">
+					<label class="form-label">Example</label>
+					<input type="search" placeholder="Search" class="form-input">
+				</div>
+			</form>
+		</div>
+
+
+		<div class="container" id="buttons">
+			<h3>Buttons</h3>
+
+			<div class="card soft">
+				<h3>Default Button</h3>
+				<div class="form-control">
+					<button>Button</button>
+				</div>
+
+				<h3>Form Button</h3>
+				<div class="form-control">
+					<button type="button" class="form-button">Button</button>
+				</div>
+				<div class="form-control">
+					<input type="button" class="form-button" value="Input">
+				</div>
+				<div>
+					<a href="#" class="form-button">Anchor</a>
+				</div>
+			</div>
+
+		</div>
+
+
+
+
+
 
 	</div>
 	
