--- a/chang.karen/styleguide/index.html
+++ b/chang.karen/styleguide/index.html
@@ -52,6 +52,7 @@
 							<li><a href="#controls">Controls</a></li>
 							<li><a href="#buttons">Buttons</a></li>
 						</ul>
+						<li><a href="#hotdog">Hotdog</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -415,11 +416,33 @@
 					<a href="#" class="form-button">Anchor</a>
 				</div>
 			</div>
-
 		</div>
 
+		<h2 id="hotdog">Hotdog</h2>
 
-
+		<div class="card soft">
+			<div class="form-control">
+				<form>
+					<input type="search" class="hotdog" placeholder="Search">
+				</form>
+			</div>
+			<div class="form-control">
+				<form>
+					<input type="search" class="hotdog dark" placeholder="Search">
+				</form>
+			</div>
+			<div class="form-control">
+				<form class="card dark">
+					<input type="search" class="hotdog light" placeholder="Search">
+				</form>
+			</div>
+			<div class="form-control">
+				<form class="hotdog">
+						<span>&equiv;</span>
+						<input type="search" placeholder="Search">
+				</form>
+			</div>
+		</div>
 
 
 
