--- a/tu.hsuanling/styleguide/index.html
+++ b/tu.hsuanling/styleguide/index.html
@@ -44,6 +44,7 @@
 						</ul>
 					<li><a href="#cards">Cards</a></li>
 					<li><a href="#navigations">Navigations</a></li>
+					<li><a href="#viewwindow">View Window</a></li>
 					<li><a href="#tables">Tables</a></li>
 					<li><a href="#figures">Figures</a></li>	
 				</ul>
@@ -162,6 +163,11 @@
 			})
 		</script>
 
+	</div>
+
+	<div class="container" id="viewwindow">
+		<h3>View Window</h3>
+		<div class="view-window" style="background-image: url('../img/pexels-scott-webb-305827.jpg');">
 	</div>
 
 	<script type="text/javascript">
