--- a/chang.karen/styleguide/index.html
+++ b/chang.karen/styleguide/index.html
@@ -176,7 +176,24 @@
 
 		<div class="container" id="gridsystem">
 			<h2>Grid System</h2>
+			<div class="card soft">
+				<h3>12 Column Grid</h3>
+				<div class="grid gap xs-small md-medium">
+					<div class="col-xs-12 col-md-12 rectangle-1">1</div>
 
+					<div class="col-xs-12 col-md-6 rectangle-1">1/2</div>
+					<div class="col-xs-12 col-md-6 rectangle-1">1/2</div>
+
+					<div class="col-xs-12 col-md-4 col-xl-3 rectangle-1">1/3</div>
+					<div class="col-xs-12 col-md-4 col-xl-6 rectangle-1">1/3</div>
+					<div class="col-xs-12 col-md-4 col-xl-3 rectangle-1">1/3</div>
+
+					<div class="col-xs-3 rectangle-1">1/4</div>
+					<div class="col-xs-3 rectangle-1">1/4</div>
+					<div class="col-xs-3 rectangle-1">1/4</div>
+					<div class="col-xs-3 rectangle-1">1/4</div>
+				</div>
+			</div>
 		</div>
 
 		<div class="container" id="flexsystem">
