--- a/chang.karen/styleguide/index.html
+++ b/chang.karen/styleguide/index.html
@@ -42,7 +42,7 @@
 						<li><a href="#viewwindow">View Window</a></li>
 						<li><a href="#navigations">Navigation</a></li>
 						<li><a href="#gridsystem">Grid System</a></li>
-						<li><a href="#flexsystem">Flex System</a></li>
+						<!-- <li><a href="#flexsystem">Flex System</a></li> -->
 						<li><a href="#tables">Tables</a></li>
 						<li><a href="#figures">Figures</a></li>
 						<li><a href="#forms">Forms</a></li>
@@ -81,6 +81,7 @@
 			<p>Dolorem labore nobis sequi assumenda quo quis voluptatem eligendi odio distinctio sint numquam iste modi ab maiores inventore pariatur, error architecto amet tenetur nisi! Dicta, dolor, obcaecati. Quas, praesentium dolor.</p>
 			<p>Quae non id porro sunt voluptas eos, eum sint recusandae praesentium possimus aliquid, maxime officiis minima tenetur, quis! Ipsa culpa repudiandae ad obcaecati, quibusdam maiores est, hic voluptatibus cum consectetur!</p>
 		</div>
+	</div>
 
 		<div class="container" id="cards">
 			<h2>Cards</h2>
@@ -103,7 +104,10 @@
 
 		<div class="container" id="viewwindow">
 			<h2>View Window</h2>
+		</div>
 
+		<div class="view-window" style="background-image:url('../img/confirmation-bg.jpg')";>
+			
 		</div>
 
 		<div class="container" id="navigations">
@@ -196,10 +200,10 @@
 			</div>
 		</div>
 
-		<div class="container" id="flexsystem">
+		<!-- <div class="container" id="flexsystem">
 			<h2>Flex System</h2>
 
-		</div>
+		</div> -->
 
 		<script>
 			const makeTable = (classes='')=> {
@@ -370,8 +374,6 @@
 			</div>
 
 		</div>
-
-	</div>
 
 	<div class="container" id="forms">
 		<h2>Forms</h2>
