--- a/chang.karen/styleguide/index.html
+++ b/chang.karen/styleguide/index.html
@@ -192,10 +192,10 @@
 					<div class="col-xs-12 col-md-4 col-xl-6 rectangle-1">1/3</div>
 					<div class="col-xs-12 col-md-4 col-xl-3 rectangle-1">1/3</div>
 
-					<div class="col-xs-3 rectangle-1">1/4</div>
-					<div class="col-xs-3 rectangle-1">1/4</div>
-					<div class="col-xs-3 rectangle-1">1/4</div>
-					<div class="col-xs-3 rectangle-1">1/4</div>
+					<div class="col-xs-12 col-md-3 rectangle-1">1/4</div>
+					<div class="col-xs-12 col-md-3 rectangle-1">1/4</div>
+					<div class="col-xs-12 col-md-3 rectangle-1">1/4</div>
+					<div class="col-xs-12 col-md-3 rectangle-1">1/4</div>
 				</div>
 			</div>
 		</div>
